[ci] More build fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -21,7 +21,7 @@ project(score_addon_datareader LANGUAGES CXX)
 score_common_setup()
 
 block()
-    set(HDF5_IS_PARALLEL 0)
+  set(HDF5_IS_PARALLEL 0)
   set(HDF5_EXTERNALLY_CONFIGURED 1)
   set(HDF5_INSTALL_NO_DEVELOPMENT 1)
   set(HDF5_ENABLE_EMBEDDED_LIBINFO 0)
@@ -39,6 +39,9 @@ block()
   set(HDF5_ALLOW_EXTERNAL_SUPPORT NO)
   set(BUILD_SHARED_LIBS 0)
   set(BUILD_STATIC_LIBS 1)
+  if(WIN32)
+      set(H5_HAVE_VASPRINTF 0 CACHE "" INTERNAL)
+  endif()
   add_subdirectory(3rdparty/hdf5)
 endblock()
 
