[ci] More build fix

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,6 +22,7 @@ score_common_setup()
 
 block()
   set(HDF5_IS_PARALLEL 0)
+  set(HDF5_ENABLE_NONSTANDARD_FEATURES 0)
   set(HDF5_EXTERNALLY_CONFIGURED 1)
   set(HDF5_INSTALL_NO_DEVELOPMENT 1)
   set(HDF5_ENABLE_EMBEDDED_LIBINFO 0)
@@ -43,15 +44,14 @@ block()
       set(H5_HAVE_VASPRINTF 0 CACHE "" INTERNAL)
   endif()
   add_subdirectory(3rdparty/hdf5)
-endblock()
-
-block()
-  set(HIGHFIVE_EXAMPLES 0)
-  set(HIGHFIVE_UNIT_TESTS 0)
-  set(HIGHFIVE_BUILD_DOCS 0)
-  set(HDF5_IS_PARALLEL 0)
-  set(HIGHFIVE_FIND_HDF5 0)
-  add_subdirectory(3rdparty/HighFive)
+  block()
+    set(HIGHFIVE_EXAMPLES 0)
+    set(HIGHFIVE_UNIT_TESTS 0)
+    set(HIGHFIVE_BUILD_DOCS 0)
+    set(HDF5_IS_PARALLEL 0)
+    set(HIGHFIVE_FIND_HDF5 0)
+    add_subdirectory(3rdparty/HighFive)
+  endblock()
 endblock()
 
 add_library(score_addon_datareader
