[ci] Do not force zlibng

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,7 +32,7 @@ block()
   set(HDF5_BUILD_UTILS 0)
   set(HDF5_BUILD_EXAMPLES 0)
   set(HDF5_BUILD_STATIC_TOOLS 0)
-  set(HDF5_USE_ZLIB_NG 1)
+#  set(HDF5_USE_ZLIB_NG 1)
   set(HDF5_USE_ZLIB_STATIC 0)
   set(HDF5_BUILD_PARALLEL_TOOLS 0)
   set(HDF5_ENABLE_PARALLEL 0)
