--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -37,8 +37,10 @@ block()
     set(HDF5_USE_ZLIB_STATIC 0)
     set(HDF5_BUILD_PARALLEL_TOOLS 0)
     set(HDF5_ENABLE_PARALLEL 0)
+    set(HDF5_ENABLE_THREADSAFE 1)
     set(ZLIB_USE_LOCALCONTENT 1)
     set(HDF5_ALLOW_EXTERNAL_SUPPORT NO)
+    set(HDF5_BUILD_HL_LIB NO)
     set(BUILD_SHARED_LIBS 0)
     set(BUILD_STATIC_LIBS 1)
     if(WIN32)
