[win32] CI FIX (see https://forum.hdfgroup.org/t/building-static-thread-safe-libs/3596/5)

--- a/.gitmodules
+++ b/.gitmodules
@@ -3,5 +3,4 @@
 	url = https://github.com/BlueBrain/HighFive
 [submodule "3rdparty/hdf5"]
 	path = 3rdparty/hdf5
-	url = https://github.com/HDFGroup/hdf5
-	branch = hdf5_1_14_5
+	url = https://github.com/jcelerier/hdf5
